# reverse-engineering-claude-code

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  pyproject.toml  research
agent/: README.md  recc_agent.py
docs/: 01-architecture.md  02-agent-loop.md  03-tools.md  04-prompts-and-context.md  05-permissions-and-hooks.md  06-subagents-and-skills.md  07-build-your-own.md  08-wire-format.md  09-state-on-disk.md  10-methodology.md  11-glossary.md  12-chat-bridge.md  13-deploy.md
npm/: package.json
promo/: social-posts.md
recc_cli/: agent.py  bridge.py  core.py  email_channel.py  inspector.py  whatsapp.py
tool/: README.md  recc.py
